--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -1,8 +1,13 @@
 <app-header titulo="BlackJack" colorFondo="dark"></app-header>
 <div class="container-fluid mesa p-5 text-light">
-    <button class="btn btn-secondary" (click)="agregarCarta()">Agregar</button>
-    <div class="container">
-        <!-- <app-carta [carta]="{id:1,valor:'K', palo: 1}"></app-carta> -->
-        <app-carta *ngFor="let c of cartas" [carta]="c"></app-carta>
-    </div>
+  <button class="btn btn-secondary" (click)="repartir()" [disabled]="empezo">
+    Empezar
+  </button>
+  <div class="container">
+    <app-carta *ngFor="let c of jugadaCroupier" [carta]="c"></app-carta>
+  </div>
+
+  <div class="container">
+    <app-carta *ngFor="let j of jugadaJugador" [carta]="j"></app-carta>
+  </div>
 </div>
