--- a/src/app/juego/mesa/mesa.component.css
+++ b/src/app/juego/mesa/mesa.component.css
@@ -4,3 +4,12 @@
     background-size: cover;
     
 }
+
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
