--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -1,13 +1,23 @@
 <app-header titulo="BlackJack" colorFondo="dark"></app-header>
 <div class="container-fluid mesa p-5 text-light">
-  <button class="btn btn-secondary" (click)="repartir()" [disabled]="empezo">
-    Empezar
-  </button>
-  <div class="container">
-    <app-carta *ngFor="let c of jugadaCroupier" [carta]="c"></app-carta>
+  <div class="">
+    <button class="btn btn-dark center" (click)="repartir()" *ngIf="!empezo">
+      <h1 class="display-6 p-3">Empezar</h1>
+    </button>
+  </div>
+  <h1 class="display-6 text-center" *ngIf="empezo">Jugada del croupier. Su puntaje: {{puntajeCroupier}}</h1>
+  <div class="container" class="d-flex justify-content-center">
+    <app-carta [carta]="c" *ngFor="let c of jugadaCroupier"></app-carta>
   </div>
 
-  <div class="container">
-    <app-carta *ngFor="let j of jugadaJugador" [carta]="j"></app-carta>
+  <div class="py-5">
+  <h1 class="display-6 text-center" *ngIf="empezo">Tu jugada. Tu puntaje: {{puntajeJugador}}</h1>
+  <div class="container" class="d-flex justify-content-center">
+    <app-carta [carta]="j" *ngFor="let j of jugadaJugador"></app-carta>
+  </div>
+</div>
+  <div class="d-flex justify-content-center">
+    <button class="btn btn-outline-warning mx-3" (click)="pedirCarta()" *ngIf="empezo" [disabled]="terminoJugada">Pedir</button>
+    <button class="btn btn-outline-danger mx-3 text-white" *ngIf="empezo" [disabled]="terminoJugada">Quedar</button>
   </div>
 </div>
