--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -18,6 +18,8 @@
 </div>
   <div class="d-flex justify-content-center">
     <button class="btn btn-outline-warning mx-3" (click)="pedirCarta()" *ngIf="empezo" [disabled]="terminoJugada">Pedir</button>
-    <button class="btn btn-outline-danger mx-3 text-white" *ngIf="empezo" [disabled]="terminoJugada">Quedar</button>
+    <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="empezo" [disabled]="terminoJugada">Quedar</button>
+    <button class="btn btn-outline-success mx-3 text-white" (click)="continuar()" *ngIf="empezo" [disabled]="!terminoJugada || perdio">Jugada Croupier</button>
+    <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="empezo">Reiniciar</button>
   </div>
 </div>
