--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -11,15 +11,18 @@
   </div>
 
   <div class="py-5">
-  <h1 class="display-6 text-center" *ngIf="empezo">Tu jugada. Tu puntaje: {{puntajeJugador}}</h1>
-  <div class="container" class="d-flex justify-content-center">
-    <app-carta [carta]="j" *ngFor="let j of jugadaJugador"></app-carta>
+    <h1 class="display-6 text-center" *ngIf="empezo">Tu jugada. Tu puntaje: {{puntajeJugador}}</h1>
+    <div class="container" class="d-flex justify-content-center">
+      <app-carta [carta]="j" *ngFor="let j of jugadaJugador"></app-carta>
+    </div>
   </div>
-</div>
   <div class="d-flex justify-content-center">
-    <button class="btn btn-outline-warning mx-3" (click)="pedirCarta()" *ngIf="empezo" [disabled]="terminoJugada">Pedir</button>
-    <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="empezo" [disabled]="terminoJugada">Quedar</button>
-    <button class="btn btn-outline-success mx-3 text-white" (click)="continuar()" *ngIf="empezo" [disabled]="!terminoJugada || perdio">Jugada Croupier</button>
+    <button class="btn btn-outline-warning mx-3" (click)="pedirCarta()" *ngIf="empezo"
+      [disabled]="terminoJugada">Pedir</button>
+    <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="empezo"
+      [disabled]="terminoJugada">Quedar</button>
+    <button #btncon class="btn btn-outline-success mx-3 text-white" (click)="continuar()"
+      *ngIf="empezo" [disabled]="!terminoJugada || perdioJugador || turnoCroupier">Jugada Croupier</button>
     <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="empezo">Reiniciar</button>
   </div>
 </div>
