--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -8,24 +8,24 @@
       <h1 class="display-6 p-3">Empezar</h1>
     </button>
   </div>
-  <h1 class="display-6 text-center" *ngIf="empezo">Jugada del croupier. Su puntaje: {{puntajeCroupier}}</h1>
+  <h1 class="display-6 text-center" *ngIf="empezo">Jugada del croupier. Su puntaje: {{ croupier.puntos }}</h1>
   <div class="container" class="d-flex justify-content-center">
-    <app-carta [carta]="c" *ngFor="let c of jugadaCroupier"></app-carta>
+    <app-carta [carta]="carta" *ngFor="let carta of croupier.mano"></app-carta>
   </div>
 
   <div class="py-5">
-    <h1 class="display-6 text-center" *ngIf="empezo">Tu jugada. Tu puntaje: {{puntajeJugador}}</h1>
+    <h1 class="display-6 text-center" *ngIf="empezo">Tu jugada. Tu puntaje: {{ jugador.puntos }}</h1>
     <div class="container" class="d-flex justify-content-center">
-      <app-carta [carta]="j" *ngFor="let j of jugadaJugador"></app-carta>
+      <app-carta [carta]="jarta" *ngFor="let jarta of jugador.mano"></app-carta>
     </div>
   </div>
   <div class="d-flex justify-content-center">
-    <button class="btn btn-outline-warning mx-3" (click)="pedirCarta()" *ngIf="empezo"
-      [disabled]="terminoJugada">Pedir</button>
+    <button class="btn btn-outline-success mx-3 text-white" (click)="pedirCarta()" *ngIf="empezo"
+      [disabled]="jugador.terminoJugada">Pedir carta</button>
     <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="empezo"
-      [disabled]="terminoJugada">Quedar</button>
-    <button #btncon class="btn btn-outline-success mx-3 text-white" (click)="continuar()"
-      *ngIf="empezo" [disabled]="!terminoJugada || perdioJugador || turnoCroupier">Jugada Croupier</button>
+      [disabled]="jugador.terminoJugada">Plantarse</button>
+    <button #btncon class="btn btn-outline-warning mx-3" (click)="continuar()"
+      *ngIf="empezo" [disabled]="!jugador.terminoJugada || jugador.perdio || turnoCroupier">Jugada Croupier</button>
     <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="empezo">Reiniciar</button>
   </div>
 </div>
