Modificaciones en la interfaz de inicio y mesa.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
             <a class="nav-link" routerLinkActive="active" routerLink="inicio">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="mesa">Mesa</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="jugar">Jugar</a>
           </li>
         </ul>
       </div>
