--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,10 +1,10 @@
-<app-header titulo="Trabajo Practico Integrador" subtitulo="Diseño y Administración de Bases de Datos"></app-header>
-<div class="container py-5 ">
+<app-header titulo="Trabajo Practico Integrador" subtitulo="Diseño y Administración de Bases de Datos" colorFondo="dark"></app-header>
+<div class="container-fluid py-5 mesa">
 
-    <h4>Integrantes:</h4>
-    <div class="rounded border border-secondary" style="overflow: hidden;">
+    <h4 class="text-light">Integrantes:</h4>
+    <div>
         
-        <table name="tablaIntegrantes" class="table table-striped table-bordered rounded" >
+        <table name="tablaIntegrantes" class="table table-dark table-striped table-bordered rounded" >
             <thead>
               <tr>
                 <th scope="col">Apellido</th>
