Modificaciones en la interfaz no encontrado.

--- a/src/app/no-encontrado/no-encontrado.component.html
+++ b/src/app/no-encontrado/no-encontrado.component.html
@@ -1,6 +1,7 @@
-
-<button class="btn btn-danger text-align-start" style="width: 100%; text-align: left;">
-    <app-header routerLink="/inicio" titulo="Pagina no encontrada" subtitulo="Volver a inicio" colorFondo="danger" >
-
-    </app-header>
-</button>
+<div class="container-fluid no-encontrado">
+    <button class="btn btn-danger text-align-start my-5" style="width: 100%; text-align: left;">
+        <app-header routerLink="/inicio" titulo="Pagina no encontrada. Error 404" subtitulo="Volver a inicio" colorFondo="danger" >
+    
+        </app-header>
+    </button>
+</div>
