--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -14,6 +14,11 @@
             </thead>
             <tbody>
               <tr>
+                <td>Bazan</td>
+                <td>Victor</td>
+                <td>112878</td>
+              </tr>
+              <tr>
                 <td>Mangini</td>
                 <td>Agustín</td>
                 <td>112659</td>
