--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="inicio">Inicio</a>
           </li>
@@ -13,6 +13,7 @@
             <a class="nav-link" routerLinkActive="active" routerLink="jugar">Jugar</a>
           </li>
         </ul>
+        <button class="btn btn-dark border border-secondary ms-3" routerLink="iniciar-sesion" type="button">Iniciar Sesión</button>
       </div>
     </div>
   </nav>
