--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -1,31 +1,31 @@
 <app-header titulo="BlackJack" colorFondo="dark"></app-header>
-<div *ngIf="terminoJuego" class="alert alert-success text-center alert-dismissible fade show m-0" role="alert">
+<div *ngIf="partida.terminoJuego" class="alert alert-success text-center alert-dismissible fade show m-0" role="alert">
   {{mensajeFinal}}
 </div>
 <div class="container-fluid mesa p-5 text-light">
   <div class="">
-    <button class="btn btn-dark center" (click)="repartir()" *ngIf="!empezo">
+    <button class="btn btn-dark center" (click)="repartir()" *ngIf="!partida.empezo">
       <h1 class="display-6 p-3">Empezar</h1>
     </button>
   </div>
-  <h1 class="display-6 text-center" *ngIf="empezo">Jugada del croupier. Puntaje: <strong>{{ croupier.puntos }}</strong></h1>
+  <h1 class="display-6 text-center" *ngIf="partida.empezo">Jugada del croupier. Puntaje: <strong>{{ partida.croupier.puntos }}</strong></h1>
   <div class="container" class="d-flex justify-content-center">
-    <app-carta [carta]="carta" *ngFor="let carta of croupier.mano"></app-carta>
+    <app-carta [carta]="carta" *ngFor="let carta of partida.croupier.mano"></app-carta>
   </div>
 
   <div class="py-5">
-    <h1 class="display-6 text-center" *ngIf="empezo">Tu jugada. Puntaje: <strong>{{ jugador.puntos }}</strong></h1>
+    <h1 class="display-6 text-center" *ngIf="partida.empezo">Tu jugada. Puntaje: <strong>{{ partida.jugador.puntos }}</strong></h1>
     <div class="container" class="d-flex justify-content-center">
-      <app-carta [carta]="jarta" *ngFor="let jarta of jugador.mano"></app-carta>
+      <app-carta [carta]="jarta" *ngFor="let jarta of partida.jugador.mano"></app-carta>
     </div>
   </div>
   <div class="d-flex justify-content-center">
-    <button class="btn btn-outline-success mx-3 text-white" (click)="pedirCarta()" *ngIf="empezo"
-      [disabled]="jugador.terminoJugada">Pedir carta</button>
-    <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="empezo"
-      [disabled]="jugador.terminoJugada">Plantarse</button>
+    <button class="btn btn-outline-success mx-3 text-white" (click)="pedirCarta()" *ngIf="partida.empezo"
+      [disabled]="partida.jugador.terminoJugada">Pedir carta</button>
+    <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="partida.empezo"
+      [disabled]="partida.jugador.terminoJugada">Plantarse</button>
     <button #btncon class="btn btn-outline-warning mx-3 text-white" (click)="continuar()"
-      *ngIf="empezo" [disabled]="!jugador.terminoJugada || turnoCroupier">Jugada Croupier</button>
-    <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="empezo">Reiniciar</button>
+      *ngIf="partida.empezo" [disabled]="!partida.jugador.terminoJugada || partida.turnoCroupier">Jugada Croupier</button>
+    <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="partida.empezo">Reiniciar</button>
   </div>
 </div>
