Cambio la logica de obtenerCarta()

--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="container-fluid mesa p-5 text-light">
   <div class="">
-    <button class="btn btn-dark center" (click)="repartir()" *ngIf="!partida.empezo">
+    <button class="btn btn-dark center" (click)="empezar()" *ngIf="!partida.empezo">
       <h1 class="display-6 p-3">Empezar</h1>
     </button>
   </div>
