--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -1,5 +1,5 @@
 <app-header titulo="BlackJack" colorFondo="dark"></app-header>
-<div *ngIf="partida.terminoJuego" class="alert alert-success text-center alert-dismissible fade show m-0" role="alert">
+<div *ngIf="terminoJuego" class="alert alert-success text-center alert-dismissible fade show m-0" role="alert">
   {{mensajeFinal}}
 </div>
 <div class="container-fluid mesa p-5 text-light">
@@ -26,6 +26,6 @@
       [disabled]="partida.jugador.terminoJugada">Plantarse</button>
     <button #btncon class="btn btn-outline-warning mx-3 text-white" (click)="continuar()"
       *ngIf="partida.empezo" [disabled]="!partida.jugador.terminoJugada || partida.turnoCroupier">Jugada Croupier</button>
-    <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="partida.empezo">Reiniciar</button>
+    <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="partida.empezo" [disabled]="!terminoJuego">Jugar de nuevo</button>
   </div>
 </div>
