--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -4,28 +4,28 @@
 </div>
 <div class="container-fluid mesa p-5 text-light">
   <div class="">
-    <button class="btn btn-dark center" (click)="empezar()" *ngIf="!partida.empezo">
+    <button class="btn btn-dark center" (click)="empezar()" *ngIf="!empezo">
       <h1 class="display-6 p-3">Empezar</h1>
     </button>
   </div>
-  <h1 class="display-6 text-center" *ngIf="partida.empezo">Jugada del croupier. Puntaje: <strong>{{ partida.croupier.puntos }}</strong></h1>
+  <h1 class="display-6 text-center" *ngIf="empezo">Jugada del croupier. Puntaje: <strong>{{ partida.croupier.puntos }}</strong></h1>
   <div class="container" class="d-flex justify-content-center">
     <app-carta [carta]="carta" *ngFor="let carta of partida.croupier.mano"></app-carta>
   </div>
 
   <div class="py-5">
-    <h1 class="display-6 text-center" *ngIf="partida.empezo">Tu jugada. Puntaje: <strong>{{ partida.jugador.puntos }}</strong></h1>
+    <h1 class="display-6 text-center" *ngIf="empezo">Tu jugada. Puntaje: <strong>{{ partida.jugador.puntos }}</strong></h1>
     <div class="container" class="d-flex justify-content-center">
       <app-carta [carta]="jarta" *ngFor="let jarta of partida.jugador.mano"></app-carta>
     </div>
   </div>
   <div class="d-flex justify-content-center">
-    <button class="btn btn-outline-success mx-3 text-white" (click)="pedirCarta()" *ngIf="partida.empezo"
+    <button class="btn btn-outline-success mx-3 text-white" (click)="pedirCarta()" *ngIf="empezo"
       [disabled]="partida.jugador.terminoJugada">Pedir carta</button>
-    <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="partida.empezo"
+    <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="empezo"
       [disabled]="partida.jugador.terminoJugada">Plantarse</button>
     <button #btncon class="btn btn-outline-warning mx-3 text-white" (click)="continuar()"
-      *ngIf="partida.empezo" [disabled]="!partida.jugador.terminoJugada || partida.turnoCroupier">Jugada Croupier</button>
-    <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="partida.empezo" [disabled]="!terminoJuego">Jugar de nuevo</button>
+      *ngIf="empezo" [disabled]="!partida.jugador.terminoJugada || partida.turnoCroupier">Jugada Croupier</button>
+    <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="empezo" [disabled]="!terminoJuego">Jugar de nuevo</button>
   </div>
 </div>
