--- a/src/app/juego/mesa/mesa.component.html
+++ b/src/app/juego/mesa/mesa.component.html
@@ -8,36 +8,49 @@
       <h1 class="display-6 p-3">Empezar</h1>
     </button>
   </div>
-  <h1 class="display-6 text-center" *ngIf="empezo">Jugada del croupier. Puntaje: <strong>{{ partida.croupier.puntos }}</strong></h1>
+  <h1 class="display-6 text-center" *ngIf="empezo">Jugada del croupier. Puntaje: <strong>{{ partida.croupier.puntos
+      }}</strong></h1>
   <div class="container" class="d-flex justify-content-center">
     <div class="row">
       <div *ngFor="let carta of partida.croupier.mano" style="max-width: 141px;">
         <div class="col">
-          <app-carta [carta]="carta" ></app-carta>
+          <app-carta [carta]="carta"></app-carta>
         </div>
       </div>
     </div>
   </div>
 
   <div class="py-5">
-    <h1 class="display-6 text-center" *ngIf="empezo">Tu jugada. Puntaje: <strong>{{ partida.jugador.puntos }}</strong></h1>
+    <h1 class="display-6 text-center" *ngIf="empezo">Tu jugada. Puntaje: <strong>{{ partida.jugador.puntos }}</strong>
+    </h1>
     <div class="container" class="d-flex justify-content-center">
       <div class="row">
         <div *ngFor="let jarta of partida.jugador.mano" style="max-width: 141px;">
           <div class="col">
-            <app-carta [carta]="jarta" ></app-carta>
+            <app-carta [carta]="jarta"></app-carta>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="d-flex justify-content-center">
-    <button class="btn btn-outline-success mx-3 text-white" (click)="pedirCarta()" *ngIf="empezo"
-      [disabled]="partida.jugador.terminoJugada">Pedir carta</button>
-    <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="empezo"
-      [disabled]="partida.jugador.terminoJugada">Plantarse</button>
-    <button #btncon class="btn btn-outline-warning mx-3 text-white" (click)="continuar()"
-      *ngIf="empezo" [disabled]="!partida.jugador.terminoJugada || partida.turnoCroupier">Jugada Croupier</button>
-    <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="empezo" [disabled]="!terminoJuego">Jugar de nuevo</button>
+  <div class="row">
+
+    <div class="d-flex justify-content-center">
+      <button class="btn btn-outline-success mx-3 text-white" (click)="pedirCarta()" *ngIf="empezo"
+        [disabled]="partida.jugador.terminoJugada">Pedir carta</button>
+      <button class="btn btn-outline-danger mx-3 text-white" (click)="terminarJugada()" *ngIf="empezo"
+        [disabled]="partida.jugador.terminoJugada">Plantarse</button>
+      <button #btncon class="btn btn-outline-warning mx-3 text-white" (click)="continuar()" *ngIf="empezo"
+        [disabled]="!partida.jugador.terminoJugada || partida.turnoCroupier">Jugada Croupier</button>
+    </div>
   </div>
+  <div class="row">
+    <div class="d-flex justify-content-center mt-3">
+      <button class="btn btn-outline-primary mx-3 text-white" (click)="reiniciar()" *ngIf="empezo"
+        [disabled]="!terminoJuego">Jugar de nuevo</button>
+      <button class="btn btn-outline-secondary mx-3 text-white" (click)="terminar()" *ngIf="empezo"
+        [disabled]="!terminoJuego">Terminar Partida</button>
+    </div>
+  </div>
+  
 </div>
