--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,2 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-light">
-    <div class="container-fluid">
-      <a class="navbar-brand p-0" routerLink="inicio"><img src="../assets/img/logo.png" class="m-0 p-0" style="max-width: 40px;" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="inicio">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="jugar">Jugar</a>
-          </li>
-        </ul>
-        <button class="btn btn-dark border border-secondary ms-3" routerLink="iniciar-sesion" type="button">Iniciar Sesión</button>
-        <app-cerrar-sesion (onCerrarSesion)="cerrarSesion()" *ngIf="sesionIniciada"></app-cerrar-sesion>
-      </div>
-    </div>
-  </nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
