--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-light">
     <div class="container-fluid">
-      <a class="navbar-brand p-0" routerLink="inicio"><img src="../assets/img/logo.png" class="m-0 p-0" style="max-width: 40px;" alt=""></a>
+      <a class="navbar-brand p-0" routerLink="inicio"><img src="https://raw.githubusercontent.com/Abraguas/blackjack-cartas/main/logo.png" class="m-0 p-0" style="max-width: 40px;" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
