--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="jugar">Jugar</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="reporte">Reportes</a>
+          </li>
         </ul>
         <app-iniciar-sesion-button *ngIf="!sesionIniciada"></app-iniciar-sesion-button>
         <app-cerrar-sesion *ngIf="sesionIniciada"></app-cerrar-sesion>
